@@ -42,7 +42,7 @@ timer_getoverrun (timerid)
 {
 # undef timer_getoverrun
 # ifndef __ASSUME_POSIX_TIMERS
-  if (__no_posix_timers == 0)
+  if (__no_posix_timers >= 0)
 # endif
     {
       struct timer *kt = (struct timer *) timerid;
